--- a/service1/src/main/resources/application.properties
+++ b/service1/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+conn.user=admin
+conn.password=
 
+conn.host=localhost
+conn.port=8081
+
+conn.driver=org.exist.xmldb.DatabaseImpl
+conn.uri=xmldb:exist://localhost:8081/exist/xmlrpc
