--- a/backend-organ-vlasti/src/main/resources/application.properties
+++ b/backend-organ-vlasti/src/main/resources/application.properties
@@ -7,4 +7,4 @@ exist.host=localhost
 exist.port=8080
 
 exist.driver=org.exist.xmldb.DatabaseImpl
-exist.uri=xmldb:exist1://localhost:8080/exist/xmlrpc
+exist.uri=xmldb:exist://localhost:8080/exist1/xmlrpc
