--- a/backend-poverenik/pom.xml
+++ b/backend-poverenik/pom.xml
@@ -47,6 +47,12 @@
 		    <version>1.1.1</version>
 		</dependency>
 		
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>eclipselink</artifactId>
+            <version>2.7.6</version>
+        </dependency>
+		
 	</dependencies>
 
 	<build>
