implementirala registraciju gradjanina na server organa vlasti

--- a/backend-organ-vlasti/src/main/resources/application.properties
+++ b/backend-organ-vlasti/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8081
 
 exist.user=admin
 exist.password=
-
 exist.host=localhost
 exist.port=8080
-
 exist.driver=org.exist.xmldb.DatabaseImpl
 exist.uri=xmldb:exist://localhost:8080/exist1/xmlrpc
+
+#dodaj ovde deo za fuseki
