sredila xsl fajlove

--- a/backend-organ-vlasti/data/fop.conf
+++ b/backend-organ-vlasti/data/fop.conf
@@ -6,7 +6,7 @@
   <font-base>./</font-base>
   <source-resolution>72</source-resolution>
   <target-resolution>72</target-resolution>
-  <default-page-settings height="11in" width="8.26in"/>
+  <default-page-settings height="11in" width="8in"></default-page-settings>
   <hyphenation-pattern lang="nl" country="BE">nl_Bel</hyphenation-pattern>
   
 	<renderers>
