rdf ekstrakcija metapodataka portal poverenika

--- a/backend-poverenik/pom.xml
+++ b/backend-poverenik/pom.xml
@@ -60,6 +60,13 @@
 			<version>2.4</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>org.apache.jena</groupId>
+		    <artifactId>apache-jena-libs</artifactId>
+		    <type>pom</type>
+		    <version>3.9.0</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
