--- a/backend-poverenik/src/main/resources/application.properties
+++ b/backend-poverenik/src/main/resources/application.properties
@@ -6,3 +6,9 @@ exist.host=localhost
 exist.port=8080
 exist.driver=org.exist.xmldb.DatabaseImpl
 exist.uri=xmldb:exist://localhost:8080/exist2/xmlrpc
+
+conn.endpoint=http://localhost:8080/fuseki
+conn.dataset=PersonDataset
+conn.query=query
+conn.update=update
+conn.data=data
