--- a/backend-organ-vlasti/src/main/resources/application.properties
+++ b/backend-organ-vlasti/src/main/resources/application.properties
@@ -6,3 +6,5 @@ exist.host=localhost
 exist.port=8080
 exist.driver=org.exist.xmldb.DatabaseImpl
 exist.uri=xmldb:exist://localhost:8080/exist1/xmlrpc
+
+cxf.path=/ws/
