izgenerisan servis za kreiranje resenja kod organa vlasti i napravljen enpoint

--- a/backend-organ-vlasti/pom.xml
+++ b/backend-organ-vlasti/pom.xml
@@ -124,6 +124,14 @@
 									</extraargs>
 									<wsdlLocation>classpath:wsdl/Zalba.wsdl</wsdlLocation>
 								</wsdlOption>
+								<wsdlOption>
+									<wsdl>${basedir}/src/main/resources/wsdl/Resenje.wsdl</wsdl>
+									<extraargs>
+										<extraarg>-impl</extraarg>
+										<extraarg>-verbose</extraarg>
+									</extraargs>
+									<wsdlLocation>classpath:wsdl/Resenje.wsdl</wsdlLocation>
+								</wsdlOption>
 							</wsdlOptions>
 						</configuration>
 						<goals>
