--- a/backend-organ-vlasti/pom.xml
+++ b/backend-organ-vlasti/pom.xml
@@ -66,6 +66,13 @@
 			<version>3.1</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>org.apache.jena</groupId>
+		    <artifactId>apache-jena-libs</artifactId>
+		    <type>pom</type>
+		    <version>3.9.0</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
