--- a/backend-organ-vlasti/bin/src/main/resources/application.properties
+++ b/backend-organ-vlasti/bin/src/main/resources/application.properties
@@ -6,3 +6,11 @@ exist.host=localhost
 exist.port=8080
 exist.driver=org.exist.xmldb.DatabaseImpl
 exist.uri=xmldb:exist://localhost:8080/exist1/xmlrpc
+
+fuseki.endpoint=http://localhost:8080/fuseki1
+fuseki.dataset=PersonDataset
+fuseki.query=query
+fuseki.update=update
+fuseki.data=data
+
+cxf.path=/ws/
