--- a/backend-poverenik/pom.xml
+++ b/backend-poverenik/pom.xml
@@ -79,6 +79,12 @@
 			<version>${cxf.version}</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
+		
 	</dependencies>
 
 	<profiles>
