--- a/backend-poverenik/pom.xml
+++ b/backend-poverenik/pom.xml
@@ -66,13 +66,15 @@
 			<version>2.4</version>
 		</dependency>
 		
+		<!--
 		<dependency>
 		    <groupId>org.apache.jena</groupId>
 		    <artifactId>apache-jena-libs</artifactId>
 		    <type>pom</type>
 		    <version>3.9.0</version>
 		</dependency>
-				
+		-->
+			 	
 		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
@@ -83,6 +85,12 @@
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-spring-boot-starter-jaxws</artifactId>
 			<version>${cxf.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.topbraid</groupId>
+			<artifactId>shacl</artifactId>
+			<version>1.3.2</version>
 		</dependency>
 		
 	</dependencies>
