--- a/email-service/pom.xml
+++ b/email-service/pom.xml
@@ -54,6 +54,12 @@
 		    <artifactId>javassist</artifactId>
 		    <version>3.25.0-GA</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>xerces</groupId>
+		    <artifactId>xercesImpl</artifactId>
+		    <version>2.8.0</version>
+		</dependency>
 						
 	</dependencies>
 
